--- a/common.ru.po
+++ b/common.ru.po
@@ -24,7 +24,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-07-24 07:22+0200\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: Andrei Stepanov, 2014-2022\n"
+"Last-Translator: Артём Котлубай, 2022\n"
 "Language-Team: Russian (http://www.transifex.com/team-xonotic/xonotic/"
 "language/ru/)\n"
 "Language: ru\n"
@@ -440,7 +440,7 @@ msgstr "Прицел для каждого оружия"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:833
 msgid "QMCMD^FPS"
-msgstr "Счётчик кадров (FPS)"
+msgstr "Счётчик кадров"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:834
 msgid "QMCMD^Net graph"
@@ -664,11 +664,11 @@ msgstr "убфлага"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:134
 msgid "FPS"
-msgstr "Счётчик кадров (FPS)"
+msgstr "Счётчик кадров"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:134
 msgid "SCO^fps"
-msgstr "fps"
+msgstr "к/с"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:135
 msgid "Number of kills minus suicides"
@@ -9199,7 +9199,7 @@ msgstr "Обратить движения мыши по вертикальной
 
 #: qcsrc/menu/xonotic/dialog_settings_input.qc:70
 msgid "Use system mouse positioning"
-msgstr "Использовать системное позиционирование мыши"
+msgstr "Использовать системное расположение мыши"
 
 #: qcsrc/menu/xonotic/dialog_settings_input.qc:75
 msgid "Enable built in mouse acceleration"
